--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,17 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+        <item name="android:statusBarColor">@color/splashscreen_bg</item>
+        <item name="android:datePickerDialogTheme">@style/Dialog.Theme</item>
+    </style>
+
+	<style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
+	    <item name="colorAccent">#FF8F44</item>
+	    <item name="android:textColorPrimary">#000</item>
+ 	</style>
+   <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/splashscreen_bg</item>
+        <item name="android:background">@drawable/background_splash</item>
     </style>
 
 </resources>
